# Podcast_generator

Podcast_generator_backend/: .env  .gitignore  README.md  check_file_path.py  db.py  example_usage.py  main.py  pyproject.toml  requirements.txt  setup.py  test_basic.py  test_simple.py
Podcast_generator_backend/agents/: script_agent.py  tts_agent.py
Podcast_generator_backend/api/: auth.py  order.py  podcast.py
Podcast_generator_backend/memory/: __init__.py  memory_store.py
Podcast_generator_backend/models/: podcast_model.py  request_models.py  transaction_model.py  user_model.py
Podcast_generator_backend/utils/: audio_utils.py  auth_utils.py  dependencies.py
Podcast_generator_backend/workflows/: __init__.py  podcast_workflow.py
Podcast_generator_frontend/frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
Podcast_generator_frontend/frontend/app/: layout.tsx  page.tsx
Podcast_generator_frontend/frontend/app/components/: AudioPlayer.tsx  Navbar.tsx  PodcastForm.tsx  ToneSelector.tsx  VoiceSelector.tsx  login.tsx  signup.tsx
Podcast_generator_frontend/frontend/app/podcastFormPage/: page.tsx
Podcast_generator_frontend/frontend/public/: tailwind.css
Podcast_generator_frontend/frontend/styles/: globals.css
